# paragraf

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: advisors.md  test.md
.claude/rules/: database.md
.github/workflows/: pages.yml
docs/: ADR-001.md  ADR-002.md  roadmap.md  test-report-2026-02-09.md
migrations/: 001_complete_schema.sql  002_document_metadata.sql  003_search_enhancements.sql  004_fix_concatenated_metadata.sql  005_legal_area_in_search_results.sql  006_derive_forskrift_legal_area.sql  007_is_current_flag.sql  008_postgres_best_practices_cleanup.sql
scripts/: embed.py
site/: index.html  package-lock.json  package.json
site/public/: CNAME  robots.txt  sitemap.xml
site/src/: App.tsx  LandingPage.tsx  index.css
site/src/components/: Button.tsx  Input.tsx
site/src/lib/: supabase.ts
src/paragraf/: __init__.py  _supabase_utils.py  cli.py  server.py  service.py  sqlite_backend.py  structure_parser.py  supabase_backend.py  vector_search.py  web.py
tests/: test_mcp_tools.sh
web/: app.py
