[project]
name = "paragraf"
version = "0.1.0"
description = "MCP server for Norwegian law lookup via Lovdata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kasper Hjohns" },
]
keywords = ["mcp", "lovdata", "norwegian-law", "legal", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
supabase = ["supabase>=2.0.0", "postgrest>=0.16.0"]
vector = ["google-genai>=1.0.0"]
http = ["flask>=3.0.0", "gunicorn>=21.0.0"]
all = ["paragraf[supabase,vector,http]"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
paragraf = "paragraf.cli:main"

[project.urls]
Homepage = "https://github.com/khjohns/paragraf"
Repository = "https://github.com/khjohns/paragraf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paragraf"]

[tool.ruff]
target-version = "py311"
line-length = 100
